apps/maintainerr/route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: maintainerr-authentik
  namespace: apps
spec:
  forwardAuth:
    address: http://authentik.apps.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr
  namespace: apps
spec:
  parentRefs:
    - {name: home, namespace: traefik}
  hostnames: [maintainerr.reza.network]
  rules:
    - matches:
        - path: {type: PathPrefix, value: /outpost.goauthentik.io}
      filters:
        - type: ExtensionRef
          extensionRef: {group: traefik.io, kind: Middleware, name: custom-errors}
        - type: ExtensionRef
          extensionRef: {group: traefik.io, kind: Middleware, name: lan-vpn-only}
      backendRefs:
        - {name: authentik, namespace: apps, port: 9000}
    - filters:
        - type: ExtensionRef
          extensionRef: {group: traefik.io, kind: Middleware, name: custom-errors}
        - type: ExtensionRef
          extensionRef: {group: traefik.io, kind: Middleware, name: lan-vpn-only}
        - type: ExtensionRef
          extensionRef: {group: traefik.io, kind: Middleware, name: maintainerr-authentik}
      backendRefs:
        - {name: maintainerr, port: 16246}
